--- a/3/css/style.css
+++ b/3/css/style.css
@@ -47,6 +47,10 @@ body{
 a{
     text-decoration: none;
 }
+img{
+    max-width: 100%;
+    height: auto;
+}
 .main-header{
     background-image: url('../img/bg-header-1.png');
     background-repeat: no-repeat;
@@ -65,6 +69,7 @@ a{
     display: flex;
     flex-direction: row;
     align-items: center;
+    flex-wrap: wrap;
 }
 .logo{
     width: 154px;
@@ -77,9 +82,11 @@ a{
 .main-nav__list{
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
     list-style: none;
     padding: 0;
     margin: 0;
+    margin-top: -10px;
 }
 .main-nav__item{
     position: relative;
@@ -149,14 +156,15 @@ a{
 }
 .search-box{
     position: relative;
-    margin-right: 10px;
 }
 .user-nav{
     display: flex;
-    justify-content: flex-end;
+    justify-content: space-between;
     align-items: center;
+    flex-wrap: wrap;
     width: 267px;
     margin-left: auto;
+    margin-top: -7px;
 }
 .user-nav__search{
     position: relative;
@@ -201,10 +209,17 @@ a{
     background-color: rgba(255, 255, 255);
     background-image: linear-gradient( 90deg, rgb(231,74,53) 0%, rgb(242,104,67) 100%);
     box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.64);
+    border-radius: 20px;
 }
 .btn:hover{
     background-image: linear-gradient( 90deg, rgba(231,74,53, 0.8) 0%, rgba(242,104,67, 0.8) 100%);
-    box-shadow: 0px 2px 2px 0px rgb(172, 16, 0);
+    box-shadow: 0px 2px 2px 0px rgba(172, 16, 0, 0.99);
+}
+.btn:active{
+    background-image: linear-gradient( 90deg, rgb(242,104,67) 0%, rgb(231,74,53) 100%);
+    box-shadow: inset 0px 2px 2px 0px rgba(148, 39, 24, 0.99);
+}
+
 }
 .login{
     margin-right: 10px;
@@ -212,7 +227,6 @@ a{
 .login__btn{
     position: relative;
     background-color: rgb(161, 180, 169);
-    border-radius: 20px;
     padding-left: 45px;
     padding-top: 8px;
     padding-bottom: 8px;
@@ -221,6 +235,7 @@ a{
     font-size: 14px;
     font-weight: 500;
     line-height: 16px;
+    border-radius: 20px;
 }
 .login__btn::after{
     position: absolute;
@@ -265,10 +280,11 @@ a{
     display: none;
 }
 .main-header__contacts{
-    align-self: flex-end;
     display: flex;
     flex-direction: column;
     align-items: flex-end;
+    align-self: flex-end;
+    flex-wrap: wrap;
     margin-bottom: 273px;
 }
 .time{
@@ -307,6 +323,7 @@ a{
     display: flex;
     flex-direction: column;
     align-items: center;
+    flex-wrap: wrap;
 }
 /*========= filters ==========*/
 .filters{
@@ -323,22 +340,24 @@ a{
     font-size: 14px;
     line-height: 16px;
 }
-.range__title{
-}
+
 /*============ banners =================*/
 .banners{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
     margin-top: 19px;
+    margin-bottom: 40px;
 }
 .banner{
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
     width: 560px;
     min-height: 229px;
     border-radius: 15px;
-}
-.banner a{
-    display: inline-block;
+    padding: 20px;
 }
 .banner--raspberry{
     background-image: url(../img/bg-banner-raspberry.jpg);
@@ -350,7 +369,6 @@ a{
 }
 .banner__title{
     margin: 0;
-    padding: 17px;
     padding-bottom: 14px;
     font-size: 35px;
     line-height: 41px;
@@ -358,9 +376,6 @@ a{
 }
 .banner__content{
     margin: 0;
-    padding: 0;
-    padding-left: 19px;
-    padding-right: 19px;
     font-size: 18px;
     font-weight: 700;
 }
@@ -369,7 +384,12 @@ a{
     padding-right: 22px;
     padding-top: 13px;
     padding-bottom: 13px;
-    border-radius: 20px;
+    margin-left: auto;
+    margin-top: auto;
+    font-size: 18px;
+    line-height: 24px;
+    font-weight: 700;
+    border-radius: 30px;
 }
 /*========= product ===========*/
 .product{
@@ -380,6 +400,38 @@ a{
 }
 .product__item{
     width: 267px;
+    text-align: center;
+}
+.product__item--icon{
+    position: relative;
+}
+.product__item--icon::after{
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 61px;
+    height: 61px;
+    background-image: url(../img/hit.svg);
+    background-repeat: no-repeat;
+}
+.product__box-img{
+    position: relative;
+}
+.product__img{
+    border-radius: 50%;
+}
+.product__price{
+    position: absolute;
+    bottom: 15px;
+    left: 0;
+    margin: 0;
+    font-size: 45px;
+    line-height: 45px;
+    font-weight: 700;
+}
+.small-font{
+    font-size: 30px;
 }
 /*============== page-control ==========*/
 .page-control{
@@ -389,14 +441,93 @@ a{
 }
 /*============== advantages =================*/
 .advantages{
+    margin-top: 23px;
+    margin-bottom: 42px;
     background-image: url(../img/bg-waffle.jpg);
     background-repeat: repeat;
+    border-radius: 15px;
+}
+.advantages__wrapper{
+    padding: 25px 20px;
+    padding-bottom: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+.advantages__title{
+    margin: 0;
+    margin-bottom: 25px;
+    font-size: 24px;
+    line-height: 30px;
+    font-weight: 500;
+    color: rgb(50, 50, 50);
+}
+.advantages__items-wrapper{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+}
+.advantages__items-box{
+    max-width: 540px;
+}
+.advantages__items-box:last-child{
+    margin-right: 0;
+}
+.advantages__item{
+    margin: 0;
+    padding-bottom: 20px;
+    padding-left: 57px;
+    color: rgb(50, 50, 50);
+}
+.advantages__item--icon-icecream, .advantages__item--icon-eco, .advantages__item--icon-cow, .advantages__item--icon-thermopak{
+    position: relative;
+}
+.advantages__item--icon-icecream::after{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -15px;
+    left: 0;
+    background-image: url(../img/icecream.svg);
+    background-repeat: no-repeat;
+}
+.advantages__item--icon-eco::after{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -15px;
+    left: 0;
+    background-image: url(../img/sheet.svg);
+    background-repeat: no-repeat;
+}
+.advantages__item--icon-cow::after{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -15px;
+    left: 0;
+    background-image: url(../img/cow.svg);
+    background-repeat: no-repeat;
+}
+.advantages__item--icon-thermopak::after{
+    content: '';
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    top: -15px;
+    left: 0;
+    background-image: url(../img/termometr.svg);
+    background-repeat: no-repeat;
 }
 /*========== group-box ==============*/
 .group-box{
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    flex-wrap: wrap;
 }
 .banner--news{
     min-height: 220px;
@@ -412,6 +543,8 @@ a{
     flex-direction: row;
     align-items: center;
     min-height: 430px;
+    margin-top: 40px;
+    margin-bottom: 20px;
     background-image: url(../img/bg-map.jpg);
     background-repeat: no-repeat;
 }
